[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Background/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cards/Card Borders etc/Back_Texture.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cards/Card Borders etc/Gold_Border.png" type="Texture" id=3]
[ext_resource path="res://Playspace.gd" type="Script" id=4]
[ext_resource path="res://DeckDraw.gd" type="Script" id=5]
[ext_resource path="res://DiscardPile.gd" type="Script" id=6]

[node name="Playspace" type="Node2D"]
script = ExtResource( 4 )

[node name="CardsInDiscard" type="Node" parent="."]

[node name="CardSlots" type="Node" parent="."]

[node name="Cards" type="Node" parent="."]

[node name="CardInPlay" type="Node" parent="."]

[node name="Background" type="Sprite" parent="."]
position = Vector2( -425, -260 )
texture = ExtResource( 1 )
centered = false

[node name="Deck" type="Node2D" parent="."]
position = Vector2( 550, 50 )
__meta__ = {
"_edit_group_": true
}

[node name="DeckDraw" type="TextureButton" parent="Deck"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Discard" type="Node2D" parent="."]
position = Vector2( 550, 750 )
__meta__ = {
"_edit_group_": true
}

[node name="DiscardPile" type="TextureButton" parent="Discard"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
script = ExtResource( 6 )
